# phonegentic_events

./: Cargo.toml  LICENSE  README.md
configs/persona/1.0.0/: persona.schema.json
src/: agent_guidance.rs  calendar.rs  lib.rs  messaging.rs  persona.rs  phone_number.rs  speech_numbers.rs  tools.rs
test-vectors/: agent_guidance.expected.txt  speech_numbers.json  spoken_phone.json
test-vectors/persona/: empty_guardrails.expected.txt  empty_guardrails.persona.json  minimal_receptionist.expected.txt  minimal_receptionist.persona.json  multi_guardrail.expected.txt  multi_guardrail.persona.json  personal_assistant_with_speakers.expected.txt  personal_assistant_with_speakers.persona.json  unicode_in_role.expected.txt  unicode_in_role.persona.json  whisper_preferred.expected.txt  whisper_preferred.persona.json
